# cute_unit_ros

./: LICENSE  README.md
cute_unit_app/: CMakeLists.txt  package.xml
cute_unit_app/include/: object_detect.h
cute_unit_app/launch/: cute_unit_app.launch
cute_unit_app/script/: cute_unit_app_node.py
cute_unit_app/src/: object_detect.cpp  object_detect_node.cpp
cute_unit_base/: CMakeLists.txt  package.xml
cute_unit_base/launch/: base.launch  cute_arm.launch.xml
cute_unit_base/rules/: 51-cute-robot.rules
cute_unit_description/: CMakeLists.txt  package.xml
cute_unit_description/launch/: model.launch
cute_unit_description/mesh/: cute_unit_base.stl
cute_unit_description/urdf/: cute_arm.urdf.xacro  cute_unit.urdf.xacro
cute_unit_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
cute_unit_moveit_config/config/: cute_unit_xacro.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
cute_unit_moveit_config/launch/: chomp_planning_pipeline.launch.xml  cute_unit_xacro_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
cute_unit_viz/: CMakeLists.txt  package.xml
cute_unit_viz/viz/: model.rviz  view.rviz
