<?xml version="1.0"?>
<package format="2">
  <name>cute_unit_base</name>
  <version>1.1.0</version>
  <description>The cute_unit_base package</description>

  <maintainer email="ye@iquotient-robotics.com">Ye Tian</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/I-Quotient-Robotics/cute_unit_ros</url>
  <url type="repository">https://github.com/I-Quotient-Robotics/cute_unit_ros</url>
  <url type="bugtracker">https://github.com/I-Quotient-Robotics/cute_unit_ros/issues</url>

  <author email="ye@iquotient-robotics.com">Ye Tian</author>

  <build_depend>roslaunch</build_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>rviz</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>realsense2_camera</depend>
  <depend>robot_state_publisher</depend>
  <depend>dynamixel_controllers</depend>

  <depend>cute_bringup</depend>
  <depend>cute_ros_control</depend>
  <depend>cute_servo_controllers</depend>

  <depend>cute_unit_viz</depend>
  <depend>cute_unit_description</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
